package command;

public class Fan {
    public void on() {
        System.out.println("风扇开始运行");
    }
    public void off() {
        System.out.println("风扇已关闭");
    }
}
